<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorMainWhite"
    android:fitsSystemWindows="true"
    android:nestedScrollingEnabled="true">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarChat"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"

        android:elevation="3dp"
        android:background="@drawable/chat_toolbar"
        app:contentInsetStart="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Back button-->
        <ImageButton
            android:id="@+id/buttonBack_chat"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:background="?android:selectableItemBackgroundBorderless"
            android:contentDescription="@string/chat_back_button_content_description"
            android:src="@drawable/ic_arrow_back" />

        <!-- Title -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/pacifico"

            android:foregroundGravity="fill"
            android:text="@string/app_name"
            android:textColor="@color/colorChatMainPink"
            android:textSize="25dp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="18dp" />

        <!-- Top chat button-->
        <ImageButton
            android:id="@+id/buttonTopChat"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_gravity="right"
            android:background="?android:selectableItemBackgroundBorderless"
            android:contentDescription="@string/chat_back_button_content_description"
            android:src="@drawable/ic_topchat"

            android:onClick="openTopChatters"/>

    </android.support.v7.widget.Toolbar>


    <LinearLayout
        android:id="@+id/inputArea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <!-- Message field-->
        <EditText
            android:id="@+id/editText_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:background="@drawable/edit_text_rounded"
            android:elevation="0dp"
            android:fontFamily="@font/roboto"
            android:textSize="16sp"
            android:hint="@string/chat_input_hint"
            android:inputType="textCapSentences|textMultiLine"

            android:padding="15dp"
            android:paddingEnd="15dp"
            android:paddingStart="25dp" />

        <!-- Send button-->
        <ImageButton
            android:id="@+id/buttonSend"
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/edit_text_rounded"
            android:contentDescription="@string/chat_send_button_content_description"
            android:elevation="0dp"
            android:paddingStart="27dp"
            android:layout_gravity="bottom"
            android:src="@drawable/ic_send_inverted" />

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/messageList"
        android:layout_width="0dp"
        android:layout_height="0dp"

        android:nestedScrollingEnabled="true"
        app:layout_constraintBottom_toTopOf="@+id/inputArea"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarChat"
        app:layout_constraintVertical_bias="0.0">

    </android.support.v7.widget.RecyclerView>

    <FrameLayout
        android:id="@+id/top_chat_fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="4dp"/>

</android.support.constraint.ConstraintLayout>







