<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background">

    <!-- Background stripes -->
    <LinearLayout
        android:id="@+id/stripes"
        android:layout_width="900dp"
        android:layout_height="900dp"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:fadingEdge="none"
        android:orientation="vertical"
        android:rotation="-45"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/gradient_stripe" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/gradient_stripe" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/gradient_stripe" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/gradient_stripe" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/gradient_stripe" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/gradient_stripe" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/gradient_stripe" />
    </LinearLayout>

    <com.github.mmin18.widget.RealtimeBlurView
        android:id="@+id/realtimeBlurView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:realtimeBlurRadius="5dp"
        app:realtimeOverlayColor="@color/colorTransparent" />

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/coordinatorLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorTransparent"
            app:elevation="0dp">

            <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/collapsingToolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                app:collapsedTitleGravity="left"
                app:collapsedTitleTextAppearance="@style/collapsed_toolbar_title"

                app:expandedTitleGravity="center_horizontal"
                app:expandedTitleMarginTop="150dp"
                app:expandedTitleTextAppearance="@style/expanded_toolbar_title"

                app:layout_scrollFlags="exitUntilCollapsed|scroll|snap"
                app:title="@string/app_name">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:height="250dp"
                    app:layout_collapseMode="pin" />

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="pin">

                    <ImageButton
                        android:id="@+id/buttonSettings"
                        android:layout_width="?android:attr/actionBarSize"
                        android:layout_height="?android:attr/actionBarSize"
                        android:layout_gravity="end"

                        android:background="?android:selectableItemBackgroundBorderless"
                        android:contentDescription="@string/login_settings_button_content_description"

                        android:onClick="openSettingsFragment"
                        android:src="@drawable/ic_settings" />

                </android.support.v7.widget.Toolbar>

            </android.support.design.widget.CollapsingToolbarLayout>

        </android.support.design.widget.AppBarLayout>

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"

            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!--Login info-->
                <TextView
                    android:layout_width="290dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="100dp"

                    android:fontFamily="@font/dosis_medium"
                    android:text="@string/login_info"
                    android:textAlignment="center"
                    android:textColor="@color/colorMainWhite"
                    android:textSize="32dp" />

                <!--Username input-->
                <EditText
                    android:id="@+id/editText_login_username"
                    android:layout_width="290dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="45dp"
                    android:background="@drawable/edit_text_login_rounded"
                    android:fontFamily="@font/dosis_medium"

                    android:hint="@string/login_edit_text_hint"
                    android:imeOptions="actionDone"
                    android:inputType="textCapWords"
                    android:maxLines="1" />

                <!--Join button-->
                <Button
                    android:id="@+id/button_login_join"
                    android:layout_width="290dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/button_rounded"
                    android:fontFamily="@font/dosis_medium"
                    android:letterSpacing="0.35"
                    android:text="@string/login_join_button"
                    android:textColor="@color/colorMainWhite"
                    android:textSize="20dp" />

                <ProgressBar
                    android:id="@+id/loadingSpinner"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:indeterminateDrawable="@drawable/progressbar_circle"
                    android:visibility="gone"
                    tools:visibility="visible"
                    android:indeterminateDuration="500"/>

                <!--Error message-->
                <TextView
                    android:id="@+id/textView_error_message"
                    android:layout_width="290dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="60dp"
                    android:background="@drawable/error_message"
                    android:fontFamily="@font/dosis_bold"
                    android:paddingStart="8dp"
                    android:paddingTop="11dp"
                    android:paddingEnd="8dp"

                    android:paddingBottom="11dp"
                    android:textAlignment="center"
                    android:textColor="@color/colorError"
                    android:textSize="18sp"
                    android:visibility="gone"
                    tools:text="lost connection to server"
                    tools:visibility="visible" />

            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>

    </android.support.design.widget.CoordinatorLayout>

    <FrameLayout
        android:id="@+id/settings_fragment_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>

